--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-requests
-plotly
-pandas
-spotipy
+streamlit==1.40.0
+requests==2.32.3
+pandas==2.2.3
+plotly==5.24.0
+spotipy==2.23.0
 python-dotenv
